Fix layout issues in Skills and Projects sections

--- a/src/components/PageBase/index.scss
+++ b/src/components/PageBase/index.scss
@@ -11,3 +11,7 @@
   display: table;
   height: 0;
 }
+
+main {
+  max-width: 100vw;
+}
